--- a/app/src/main/res/anim/alpha_demo.xml
+++ b/app/src/main/res/anim/alpha_demo.xml
@@ -2,7 +2,8 @@
     android:duration="2000"
     android:fromAlpha="1.0"
     android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-    android:toAlpha="0.1" /><!--
+    android:toAlpha="0.1" />
+    <!--
     fromAlpha :起始透明度
     toAlpha:结束透明度
     1.0表示完全不透明
