--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -163,13 +164,16 @@
             android:id="@+id/lvPlaylists"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/controlBar"
+            android:layout_above="@+id/playStatusBar"
             android:layout_below="@id/lyActionList"
             tools:listitem="@layout/item_play_list" />
 
         <include
-            android:id="@+id/controlBar"
-            layout="@layout/layout_play_bar" />
+            android:id="@+id/playStatusBar"
+            layout="@layout/layout_play_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 </layout>
