--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -9,48 +9,64 @@
 
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/side_padding">
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:scaleType="fitStart"
-            android:src="@mipmap/ic_music" />
+            android:id="@+id/btnDelete"
+            android:layout_width="32dp"
+            android:layout_height="38dp"
+            android:layout_alignParentEnd="true"
+            android:padding="@dimen/view_padding"
+            android:src="@mipmap/ic_close_w"
+            android:tint="@color/greyLightAlpha" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="marquee"
-            android:fadingEdge="horizontal"
-            android:gravity="center_vertical"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:text="@{model.name}"
-            android:textColor="@color/textColor"
-            tools:text="对木偶唱歌" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:layout_toStartOf="@+id/btnDelete"
+            android:orientation="horizontal"
+            android:padding="@dimen/view_padding">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" - " />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:singleLine="true"
+                android:text="@{String.valueOf(model.position)}"
+                android:textColor="@color/textColorHint"
+                tools:text="001" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{model.artist}"
-            android:textColor="@color/textColorHint"
-            tools:text="杨千嬅" />
+            <Space
+                android:layout_width="@dimen/view_padding"
+                android:layout_height="match_parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{model.position}"/>
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:ellipsize="marquee"
+                android:fadingEdge="horizontal"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="@{model.name}"
+                android:textColor="@color/textColor"
+                tools:text="对木偶唱歌发发324727777777777777777424324" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=" - " />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:singleLine="true"
+                android:text="@{model.artist}"
+                android:textColor="@color/textColorHint"
+                tools:text="杨千嬅" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 </layout>
