--- a/app/src/main/res/layout/layout_play_bar.xml
+++ b/app/src/main/res/layout/layout_play_bar.xml
@@ -1,91 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:background="@color/greyLighterAlpha"
-    android:orientation="horizontal"
-    tools:showIn="@layout/fragment_main">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:id="@+id/lyMiniSeekBar"
+    <data>
+        <variable
+            name="player"
+            type="android.media.MediaPlayer" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/lyMiniCtrl"
-        android:orientation="vertical">
+        android:background="@color/greyLighterAlpha"
+        android:orientation="horizontal"
+        tools:showIn="@layout/fragment_main">
 
-        <TextView
-            android:id="@+id/tvMusicTitle"
-            style="@style/textview_marquee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/view_padding"
-            android:paddingLeft="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/view_padding"
-            tools:text="我本人 - 吴雨霏"
-            android:textColor="@color/gre_press_bro_disgre"
-            android:textSize="@dimen/text_font_normal"/>
-
-        <SeekBar
-            android:id="@+id/playSeekBar"
+        <LinearLayout
+            android:id="@+id/lyMiniSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="100"
-            android:maxHeight="3dp"
-            android:minHeight="2dp"
-            android:progressDrawable="@drawable/bg_seek_bar"
-            android:thumb="@color/brownLightAlpha"
-            tools:progress="50"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/view_padding">
+            android:layout_toLeftOf="@+id/lyMiniCtrl"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/ctrlCurTime"
+                android:id="@+id/tvTitle"
+                style="@style/textview_marquee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="00:00"
-                android:textColor="@color/textGrey"
-                android:textSize="@dimen/text_font_small"/>
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingTop="@dimen/view_padding"
+                android:paddingBottom="@dimen/view_padding"
+                android:textColor="@color/gre_press_bro_disgre"
+                android:textSize="@dimen/text_font_normal"
+                tools:text="我本人 - 吴雨霏" />
 
-            <TextView
-                android:id="@+id/ctrlTotalTime"
+            <SeekBar
+                android:id="@+id/playSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="100"
+                android:maxHeight="3dp"
+                android:minHeight="2dp"
+                android:progressDrawable="@drawable/bg_seek_bar"
+                android:thumb="@color/brownLightAlpha"
+                tools:progress="50" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/view_padding">
+
+                <TextView
+                    android:id="@+id/ctrlCurTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="00:00"
+                    android:textColor="@color/textGrey"
+                    android:textSize="@dimen/text_font_small" />
+
+                <TextView
+                    android:id="@+id/ctrlTotalTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:text="@{String.valueOf(player.duration)}"
+                    android:textColor="@color/textGrey"
+                    android:textSize="@dimen/text_font_small" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyMiniCtrl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true">
+
+            <ImageView
+                android:id="@+id/miniCtrlPlay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:text="00:00"
-                android:textColor="@color/textGrey"
-                android:textSize="@dimen/text_font_small"/>
-        </RelativeLayout>
-    </LinearLayout>
+                android:padding="@dimen/side_padding"
+                android:src="@drawable/ic_mini_play" />
 
-    <LinearLayout
-        android:id="@+id/lyMiniCtrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true">
+            <ImageView
+                android:id="@+id/miniCtrlNext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingRight="@dimen/side_padding"
+                android:src="@drawable/ic_mini_next" />
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/miniCtrlPlay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/side_padding"
-            android:src="@drawable/ic_mini_play"/>
+    </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/miniCtrlNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingRight="@dimen/side_padding"
-            android:src="@drawable/ic_mini_next"/>
-    </LinearLayout>
-
-</RelativeLayout>
+</layout>
