--- a/app/src/main/res/layout/layout_play_list.xml
+++ b/app/src/main/res/layout/layout_play_list.xml
@@ -5,8 +5,7 @@
     <LinearLayout
         android:id="@+id/lyPlayActList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_height="420dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -14,7 +13,8 @@
             android:id="@+id/tvListTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/view_padding"
+            android:background="@color/white"
+            android:padding="@dimen/view_padding"
             android:text="本地歌曲列表："
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/text_font_normal" />
@@ -25,6 +25,7 @@
             android:id="@+id/tracksView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:cacheColorHint="@color/greyLightAlpha"
             android:dividerHeight="1dp"
             android:fadingEdge="none"
